# IR2425_GROUP_18

./: CMakeLists.txt  README.md  package.xml
action/: SearchIds.action
include/assignment1/: functions.h  robot_status.h
launch/: run.launch  setup.launch
src/: action_client.cpp  action_server.cpp  functions.cpp  node_a.cpp  node_b.cpp  robot_status.cpp
